Fixed inline code to wrap on small screens

--- a/src/css/components/markdown.css
+++ b/src/css/components/markdown.css
@@ -51,7 +51,15 @@
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-1;
+  @apply
+    font-mono
+    text-sm
+    inline
+    bg-gray-200
+    rounded
+    px-1
+    py-1
+    break-words;
 }
 
 .markdown pre {
